--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -34,6 +34,8 @@ $featured-banner-border: #5e0c19;
 
 $events-background: #e3e3e3;
 
+$body-bg: #f0f5f7;
+
 $footer-bg: #000000;
 $footer-border: #686461;
 $footer-blue-bg: #03152D;
@@ -58,3 +60,8 @@ $home-page-border-purple: #491EA4;
 $home-page-subheader-light-blue: #03ADD2;
 
 $product-page-hover-time: 0.5s;
+
+$card-drop-shadow: 0px 2px 3px 0px rgba(18, 38, 49, 0.15);
+$helptext-grey: #58585A;
+
+$dashboard-tab-inactive: #8A8B8C;
