--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -39,6 +39,7 @@
 @import "home-page/home-page-contact-row";
 @import "product-page/program-courses.scss";
 @import "cards.scss";
+@import "banner";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
