--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -330,17 +330,18 @@ body.new-design {
 
           .enrollment-info-icon {
             max-width: 20px;
-            margin-right: 12px;
+            margin-right: 8px;
+            padding-left: 0;
 
             img {
-              max-width: 20px;
+              max-width: 18px;
             }
           }
 
           .enrollment-info-text {
             width: auto;
             flex-grow: 1;
-            color: #58585A;
+            color: $helptext-grey;
 
 
             .pacing-faq-link {
@@ -374,11 +375,20 @@ body.new-design {
             padding-right: 0;
             height: fit-content;
             line-height: normal;
+
+            &:hover {
+              text-decoration-line: none;
+              color: $brand-darker-bg;
+            }
           }
           .more-dates-enrollment-list{
             list-style: none;
+            font-size: 14px;
+            color: $helptext-grey;
+            margin-top: 5px;
+            margin-bottom: 0;
             li {
-              padding-left: 36px;
+              padding-left: 29px;
             }
             button.more-dates-link {
               font-size: 14px;
