--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="col order-md-2 order-1" id="product-info-box">
-          <div class="px-4 py-2 border align-items-center justify-items-top d-flex flex-column">
+          <div class="py-2 border align-items-center justify-items-top d-flex flex-column">
             <div class="hero-media">
               {% if page.video_url %}
                 {% videojs page %}
