--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -168,8 +168,7 @@
       
           </div>
         </div>
-        <div class="col order-md-2 order-1" id="product-info-box">
-          <div class="py-2 border align-items-center justify-items-top d-flex flex-column">
+        <div class="col order-md-2 order-1 py-2 border align-items-center justify-items-top d-flex flex-column" id="product-info-box">
             <div class="hero-media">
               {% if page.video_url %}
                 {% videojs page %}
@@ -196,7 +195,6 @@
               <div class="w-100" id="upsellCard"></div>
             </div>
             {% endif %}
-          </div>
         </div>
 
         {% if instructors %}
