--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -298,9 +298,13 @@ body.new-design {
           margin: 10px 0;
           padding: 10px 0;
 
-          h3 {
+          .related-programs-info {
             font-size: 16px;
             font-weight: 600;
+
+            img {
+              margin-right: 10px;
+            }
           }
         }
 
