--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -403,6 +403,10 @@ body.new-design {
             padding: 0;
             font-size: smaller;
           }
+          .more-info.more-dates {
+            height: fit-content;
+            line-height: normal;
+          }
           .finaid-link {
             display: block;
             font-size: 14px;
