fixing infobox container

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -168,7 +168,9 @@
       
           </div>
         </div>
-        <div class="col order-md-2 order-1 py-2 border align-items-center justify-items-top d-flex flex-column" id="product-info-box">
+       <div class="col order-md-2 order-1" id="product-info-box">
+        <div class="border align-items-center justify-items-top d-flex flex-column product-info-box-container">
+
             <div class="hero-media">
               {% if page.video_url %}
                 {% videojs page %}
@@ -241,6 +243,7 @@
         {% endfor %}
         {% endif %}
 
+      </div>
       </div>
     </section>
   </div>
