updating some other styles

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -169,7 +169,7 @@
           </div>
         </div>
        <div class="col order-md-2 order-1" id="product-info-box">
-        <div class="border align-items-center justify-items-top d-flex flex-column product-info-box-container">
+        <div class="align-items-center justify-items-top d-flex flex-column product-info-box-container">
 
             <div class="hero-media">
               {% if page.video_url %}
@@ -191,12 +191,6 @@
 
               <div class="w-100" id="productDetailEnrollment"></div>
             </div>
-
-            {% if page.is_course_page %}
-            <div class="stats-row">
-              <div class="w-100" id="upsellCard"></div>
-            </div>
-            {% endif %}
         </div>
 
         {% if instructors %}
