program info box

--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -388,6 +388,7 @@ body.new-design {
               margin-left: .5rem;
               padding: 3px;
               font-weight: normal;
+              color: white;
 
             }
           }
