--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -337,7 +337,6 @@ body.new-design {
               font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
               color: $warning;
               padding: 0;
-              margin-top: .25rem;
               width: fit-content;
             }
             p{
@@ -347,7 +346,7 @@ body.new-design {
               font-family: Inter, sans-serif;
               line-height: 15px;
               margin: 0;
-              padding: 0 10px 0 0;
+              padding: 0 10px 0 10px;
             }
           }
           .callout-warning{
