Course format pacing info popup (#2187)

--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -455,6 +455,17 @@ body.new-design {
     }
   }
 
+  .pacing-info-dialog {
+    max-width: 500px;
+
+    .modal-header {
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+    .modal-content {
+      padding: 5px 14px;
+    }
+  }
 
   .upgrade-enrollment-modal {
     max-width: 750px;
