--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -291,9 +291,9 @@ body.new-design {
           text-align: center;
         }
 
-        .btn-enrollment-button:disabled {
+        .btn-enrollment-button:disabled, .btn-gradient-red:disabled {
           color: $white;
-          background-color: $dashboard-tab-inactive;
+          background: $dashboard-tab-inactive !important;
           border-color: $dashboard-tab-inactive;
         }
 
